--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,42 @@
 .Weather {
   border: 1px solid #dadde1;
+  color: #212529;
+  padding: 16px;
+  border-radius: 4px;
+}
+.Weather h1 {
+  display: block;
+  font-family: Arial, sans-serif;
+  font-size: 24px;
+  font-weight: 100;
+  margin: 20px 0 0 0;
+  line-height: 29px;
+}
+.Weather form {
+  margin-bottom: 20px;
+}
+.Weather ul {
+  margin: 0;
+  padding: 0;
+}
+.Weather li {
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+  list-style: none;
+}
+
+.Weather img {
+  height: 78px;
+  margin-right: 10px;
+  display: inline-block;
+}
+
+.Weather .temperature {
+  font-weight: bold;
+
+  font-size: 48px;
+  line-height: 64px;
+  font-weight: 400;
+  display: inline-block;
 }
