--- a/src/Weather.css
+++ b/src/Weather.css
@@ -27,16 +27,23 @@
 }
 
 .Weather img {
-  height: 78px;
-  margin-right: 10px;
+  height: 150px;
   display: inline-block;
+  position: relative;
+  bottom: 40px;
 }
 
 .Weather .temperature {
   font-weight: bold;
-
-  font-size: 48px;
+  font-size: 58px;
   line-height: 64px;
   font-weight: 400;
   display: inline-block;
+}
+
+.Weather .unit {
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+  top: -30px;
 }
