--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,24 @@
 .App {
   max-width: 700px;
   margin: 30px auto;
+  font-family: "Poppins", sans-serif;
 }
 
 .App footer {
   font-size: 11px;
   margin: 10px 0;
+}
+
+body {
+  background: linear-gradient(
+    109.6deg,
+    rgb(223, 234, 247) 11.2%,
+    rgb(244, 248, 252) 91.1%
+  );
+  height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+html {
+  height: 100%;
 }
