--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,28 +1,47 @@
 .Weather {
   border: 1px solid #dadde1;
   color: #212529;
-  padding: 16px;
-  border-radius: 4px;
+  padding: 40px;
+  border-radius: 8px;
+  background-color: #ffff;
+  box-shadow: 10px 10px 10px rgba(124, 131, 138, 0.4);
 }
 .Weather h1 {
-  display: block;
-  font-family: Arial, sans-serif;
-  font-size: 24px;
+  color: #000000;
+  font-size: 45px;
   font-weight: 100;
-  margin: 20px 0 0 0;
-  line-height: 29px;
+  line-height: 30px;
+  margin: 15px 0px 10px 0px;
+  text-transform: uppercase;
 }
 .Weather form {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.btn {
+  background-color: #888b8d;
+  border-color: #888b8d;
+}
+
+.btn:hover {
+  background-color: #b3b6b7;
+  border-color: #b3b6b7;
+}
+
+.form-control:focus {
+  border-color: #b3b6b7;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+    0 0 8px rgba(124, 131, 138, 0.6);
 }
 .Weather ul {
   margin: 0;
   padding: 0;
 }
 .Weather li {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 100;
-  line-height: 19px;
+  line-height: 20px;
   list-style: none;
 }
 
@@ -34,9 +53,13 @@
 .Weather .temperature {
   font-weight: bold;
   font-size: 58px;
-  line-height: 64px;
+  line-height: 50px;
   font-weight: 400;
   display: inline-block;
+}
+
+.Weather .description {
+  opacity: 0.6;
 }
 
 .Weather .unit {
@@ -44,4 +67,26 @@
   font-weight: 400;
   position: relative;
   top: -30px;
+}
+
+.Weather .Today-temp {
+  margin: 50px 0px 0px 0px;
+}
+
+.WeatherInfo {
+  margin: 0px 20px 0px 20px;
+}
+
+.Weather .Today-info {
+  margin: 50px 0px 0px 0px;
+  text-align: right;
+  opacity: 0.6;
+}
+
+.Weather footer {
+  font-size: 12px;
+  margin-top: 60px;
+  line-height: 18px;
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
 }
